--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-81d9f438-05f7-4c1e-abef-3ed2a06d2940;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
